# sq5-tracker

./: .env.example  pyproject.toml
.github/workflows/: scrape.yml
src/sq5_tracker/: __init__.py
